fixes a bug where the action button in the calendar box on the sidebar is maligned because of the previous glare template update in monoSnippets

--- a/frontend/ui/arboreal.styles/_arboreal.style.general.sidebar.scss
+++ b/frontend/ui/arboreal.styles/_arboreal.style.general.sidebar.scss
@@ -366,6 +366,7 @@
 			li {
 			
 				@include size(2 * $pack, 6 * $slice);
+				margin: 0 (2 * $slice);
 				
 				@include inlineBlock;
 				
@@ -430,14 +431,20 @@
 				
 					@include glareSplitHorizontal;
 					height: 100%;
+					position: absolute;
+					top: 0;
+				
+				}
+				
+				&:before {
+				
+					left: -1 * $slice;
 				
 				}
 				
 				&:after {
 				
-					position: absolute;
-					right: 0;
-					top: 0;
+					right: -1 * $slice;
 				
 				}
 			
